--- a/capstoneProject/MD/app/src/main/AndroidManifest.xml
+++ b/capstoneProject/MD/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,7 +37,7 @@
             tools:ignore="LockedOrientationActivity"
             android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity
-            android:name=".ui.ResultActivity"
+            android:name=".ui.result.ResultActivity"
             android:exported="false" />
         <activity
             android:name=".ui.news.detail.NewsDetailsActivity"
